# offline-ai-llm-agent

./: README.md  build_log.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/jarvisapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jarvis_llm.cpp  llama.h
app/src/main/java/com/example/jarvisapp/: BackendClient.kt  CommandExecutor.kt  FloatingBubbleManager.kt  JarvisAccessibilityService.kt  JarvisService.kt  LlamaEngine.kt  MainActivity.kt
app/src/main/java/com/example/jarvisapp/actions/: AppAction.kt  CallAction.kt  FacebookAction.kt  NavigationAction.kt  SettingsAction.kt  WhatsAppAction.kt
app/src/main/java/com/example/jarvisapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: bubble_background.xml  pulse_ring.xml
app/src/main/res/layout/: activity_main.xml  bubble_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml
app/src/test/java/com/example/jarvisapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
